--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -41,8 +41,8 @@
     inset: 0;
     opacity: 0;
     display: grid;
-    transition: 2000ms  opacity ease-in-out;
-    transition-delay: 2000ms;
+    transition: 1000ms  opacity ease-in-out;
+    transition-delay: 1000ms;
     gap: 1.5rem;
     object-fit: cover;
 }
@@ -67,7 +67,7 @@
     display: flex;
     flex-direction:column;
     justify-content:flex-end;
-    padding: 20px;
+    padding: 30px;
 }
 
 .title {
@@ -86,4 +86,34 @@
     font-size: 1.25rem;
     line-height: 1;
     color: rgba(255, 255, 255, .8);
+}
+
+.slideButtons {
+    position: absolute;
+    z-index: 5;
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+    width: 100%;
+    bottom: 5px;
+}
+
+.slideButtonContainer {
+    border-radius: .25rem;
+    background-color: rgba(0, 0, 0, 0.3);
+    display: flex;
+    height: .5rem;
+    padding: 5px;
+    align-items: center;
+    cursor: pointer;
+}
+
+.slideButtonContainer:hover {
+    background-color: rgba(0, 0, 0, 0.5);
+}
+.slideButton {
+    width: 2rem;
+    height: .125rem;
+    border: none;
+    background-color: rgba(255, 255, 255, .9);
 }
