--- a/src/components/Carousel/Carousel.module.css
+++ b/src/components/Carousel/Carousel.module.css
@@ -44,9 +44,9 @@
     opacity: 1;
 }
 
-.img {
-    width: 100%;
+.carouselImg {
     height: 300px;
+    width: 100%;
     object-fit: cover;
     grid-row: 1/2;
     grid-column: 1/2;
