--- a/src/components/Carousel/Carousel.module.css
+++ b/src/components/Carousel/Carousel.module.css
@@ -58,10 +58,16 @@
     display: flex;
     flex-direction:column;
     justify-content:flex-end;
-    padding: 30px;
+    padding: 40px 0;
     text-align: center;
     text-shadow: 1px 5px 10px #000000;
     line-height: 1;
+}
+
+@media screen and (max-width: 450px) {
+    .title {
+        display: none;
+    }
 }
 
 .title {
@@ -83,7 +89,7 @@
     gap: 1rem;
     justify-content: center;
     width: 100%;
-    bottom: 5px;
+    bottom: 15px;
 }
 
 .slideButtonContainer {
