--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,9 @@
 .container {
     padding: 3rem 5rem;
 }
+
+@media screen and (max-width: 500px) {
+    .container {
+        padding: 1rem;
+    }
+}
