--- a/src/components/Carousel/Carousel.module.css
+++ b/src/components/Carousel/Carousel.module.css
@@ -36,7 +36,8 @@
     grid-row: 1/2;
     grid-column: 1/2;
     opacity: 0;
-    display: grid;
+    /* display: grid; */
+    position: relative;
     transition: 2000ms  opacity ease-in;
 }
 
@@ -47,20 +48,31 @@
 .carouselImg {
     width: 100%;
     object-fit: cover;
-    grid-row: 1/2;
-    grid-column: 1/2;
+    /* grid-row: 1/2;
+    grid-column: 1/2; */
 }
 
 .imgText {
-    grid-row : 1/2;
-    grid-column: 1/2;
+    /* grid-row : 1/2;
+    grid-column: 1/2; */
+    position: absolute;
+    bottom: 2rem;
     display: flex;
-    flex-direction:column;
-    justify-content:flex-end;
-    padding: 40px 0;
+    justify-content: center;
+    align-items: center;
+    /* flex-direction:column; */
+    /* justify-content:flex-end; */
+    /* padding: 10px; */
     text-align: center;
-    text-shadow: 1px 5px 10px #000000;
-    line-height: 1;
+    /* text-shadow: 1px 5px 10px #000000; */
+    background-color: rgba(0, 0, 0, .5);
+    width: 100vw;
+    color: white;
+}
+
+.imgTextDivider {
+    height: 2rem;
+    border: 1px solid #4b59f7;
 }
 
 @media screen and (max-width: 450px) {
@@ -70,15 +82,13 @@
 }
 
 .title {
-    font-size: 3rem;
-    color: rgba(255, 255, 255, .7);
+    font-size: 2rem;
     padding: 10px;
 }
 
 .subtitle {
-    font-family: Calibri;
-    font-size: 1.25rem;
-    color: rgba(255, 255, 255, .8);
+    font-size: 1rem;
+    padding: 10px;
 }
 
 .slideButtons {
