--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,17 @@
         padding: 1rem;
     }
 }
+
+@font-face {
+    font-family: "GoldmanBold";
+    src: local("GoldmanBold"),
+     url("./fonts/Goldman/Goldman-Bold.ttf") format("truetype");
+    font-weight: bold;
+}
+    
+@font-face {
+    font-family: "Barbershop-in-Thailand";
+    src: local("Barbershop-in-Thailand"),
+     url("./fonts/barbershop-in-thailand/Barbershop-in-Thailand.ttf") format("truetype");
+    font-weight: bold;
+} 
