--- a/src/components/ContactUsForm/ContactUsForm.module.css
+++ b/src/components/ContactUsForm/ContactUsForm.module.css
@@ -33,13 +33,16 @@
 .submitButton {
     width: 100%;
     border: none;
-    height: 2.5rem;
+    height: 3rem;
     border-radius: 5px;
     margin: 1rem 0;
     font-size: 1.25rem;
     padding: .5rem;
     color: white;
     background-color: #4B59f7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .terms {
