--- a/src/components/ContactSection/Contact.module.css
+++ b/src/components/ContactSection/Contact.module.css
@@ -7,7 +7,7 @@
 .row {
     display: flex;
     gap: 2rem;
-    align-items: center;
+    align-items: flex-start;
 }
 
 @media screen and (max-width: 760px) {
