--- a/src/components/Utilities/Utilities.module.css
+++ b/src/components/Utilities/Utilities.module.css
@@ -1,23 +1,24 @@
 .container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    gap: 2rem;
     align-items: center;
-    margin-bottom: 10px;
-    box-shadow: 0 2px 14px #c5b3b3;
+    padding: 2rem;
+    background-color: rgba(0,0,0,.02);
 }
 
 .header {
-    font-size: 2rem;;
-    border-right : 1px solid #bbb;
-    padding: 2rem;
+    font-size: 2rem;
+    font-weight: bold;
+    border-bottom : 1px solid #bbb;
+    font-family: 'Playfair Display', serif;
 }
 
 .utilities {
-    padding: 1rem 2rem;
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    gap: 1.5rem;
-    width: 70%;
+    grid-template-columns: repeat(5, 1fr);
+    gap: .5rem;
 }
 
 .utility {
@@ -25,6 +26,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: white;
+    aspect-ratio: 1.3/1;
+    padding: 0 2vw;
+    box-shadow: 4px 4px 8px 0px rgba(0,0,0,0.2);
+    border-bottom: 1px solid #e33037;
+    border-radius: 1px;
 }
 
 .utility:hover {
@@ -33,34 +40,28 @@
 }
 
 .utilityImage {
-    width: 30%;
-    padding: .25rem;
+    width: 40%;
+    margin-bottom: 10%;
+    /* padding: .25rem; */
 }
 
 .utilityName {
     text-align: center;
-    font-size: 1rem;
     width: 100%;
+    font-weight: bold;
 }
 
 @media screen and (max-width: 725px) {
+
     .container {
-        flex-direction: column;
+        padding: 2rem 0;
     }
-
-    .header {
-        border-right: none;
-        border-bottom : 1px solid #bbb;
-        padding: 1rem;
-    }
-
+    
     .utilities {
-        grid-template-columns: repeat(3, 1fr);
-        width: 100%;
-        gap: .5rem;
+        grid-template-columns: repeat(2, 1fr);
     }
 
-    .utilityImage {
-        width: 30%;
+    .utility {
+        box-shadow: 4px 4px 8px 0px rgba(0,0,0,0.1);
     }
 }
